# compvision3d

./: .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  global_config.json  params.yaml  pyproject.toml  tox.ini  vid_keyframe_annotation.ipynb
.dvc/: config
checkpoints/: .gitignore  u2net.pth.dvc
data/: .gitignore
data/processed/: .gitignore  irrmaps.dvc  tets.dvc
data/processed/colmap_db/colmap_text/: .gitignore  cameras.txt  cameras_true.txt  images.txt
data/processed/configs/: .gitignore  global_config.json  global_config.json.dvc  nerf_transforms_hotdog.json
data/raw/: video.dvc
data/raw/calibration/: .gitignore  images.dvc  video.dvc
data/raw/calibration/video/: .gitignore  calibration.MOV.dvc
data/raw/meta/: checkpoint.json  meta.json  theta.json
data/results/: .gitignore
notebooks/: reconstruction.ipynb  vid_keyframe_annotation.ipynb
nvdiffrec/dataset/: dataset.py  dataset_nerf.py
nvdiffrec/geometry/: dlmesh.py  dmtet.py
nvdiffrec/render/: light.py  material.py  mesh.py  mlptexture.py  obj.py  regularizer.py  render.py  texture.py  util.py
nvdiffrec/render/renderutils/: bsdf.py  loss.py
nvdiffrec/render/renderutils/tests/: test_bsdf.py  test_cubemap.py  test_loss.py  test_mesh.py  test_perf.py
nvdiffrec/support/: training.py  validation_and_testing.py
nvdiffrec/supports/: losses_and_batch.py  material_utility.py  training.py  uvmap.py  validation_and_testing.py
scripts/: apply_noise.py  camera_calibration.py  colmap2nerf.py  image_preprocessing.py  mixup.py  reconstraction.py  reconstruction.py  run_colmap.py
segmentation/inference/: inference.py
src/: __init__.py
src/data/: data_loader.py
src/inference/: inference.py
src/unet/: u2net.py
